; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_map.c_vm_map_try_merge_entries.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_map.c_vm_map_try_merge_entries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@MAP_ENTRY_NOMERGE_MASK = common dso_local global i32 0, align 4
@UNLINK_MERGE_NEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_map_try_merge_entries(i32 %0, %struct.TYPE_8__* %1, %struct.TYPE_8__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %5, align 8
  store %struct.TYPE_8__* %2, %struct.TYPE_8__** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @VM_MAP_ASSERT_LOCKED(i32 %7)
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %10 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @MAP_ENTRY_NOMERGE_MASK, align 4
  %13 = and i32 %11, %12
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %28

15:                                               ; preds = %3
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %18 = call i64 @vm_map_mergeable_neighbors(%struct.TYPE_8__* %16, %struct.TYPE_8__* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %15
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %23 = load i32, i32* @UNLINK_MERGE_NEXT, align 4
  %24 = call i32 @vm_map_entry_unlink(i32 %21, %struct.TYPE_8__* %22, i32 %23)
  %25 = load i32, i32* %4, align 4
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %27 = call i32 @vm_map_merged_neighbor_dispose(i32 %25, %struct.TYPE_8__* %26)
  br label %28

28:                                               ; preds = %20, %15, %3
  ret void
}

declare dso_local i32 @VM_MAP_ASSERT_LOCKED(i32) #1

declare dso_local i64 @vm_map_mergeable_neighbors(%struct.TYPE_8__*, %struct.TYPE_8__*) #1

declare dso_local i32 @vm_map_entry_unlink(i32, %struct.TYPE_8__*, i32) #1

declare dso_local i32 @vm_map_merged_neighbor_dispose(i32, %struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
